# tageditor

./: .gitignore  CMakeLists.txt  es_AR.ts  fileinfo.cpp  fileinfo.h  main.cpp  tageditor.cpp  tageditor.h  tageditor.pro  tageditor.ui
translations/: es_AR.ts  locale.pri  locale.pri~
